--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,113 @@
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      type="text/css"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
+    <link rel="stylesheet" href="/styles/tweets-timeline.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script
+      type="text/javascript"
+      src="/scripts/composer-char-counter.js"
+    ></script>
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <nav>
-      <span>tweeter</span>
+    <nav class="navbar-top">
+      <span class="navbar-logo">Tweeter</span>
+      <div class="navbar-menu">
+        <p><strong>Write</strong> a new tweet</p>
+        <i class="fa-solid fa-angles-down"></i>
+      </div>
     </nav>
 
+    <header id="profile-header">
+      <div>
+        <img src="/images/profile-hex.png" />
+      </div>
+      <br />
+      <div>
+        <h2 id="profile-name">JGM</h2>
+      </div>
+    </header>
+
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form method="POST" action="/tweets">
+          <div id="label-textarea">
+            <label for="tweet-text">What are you humming about?</label>
+            <!-- Use textarea instead of form to provide user with expandable text area, incase tweet gets long. -->
+            <textarea name="text" id="tweet-text"></textarea>
+          </div>
+          <div class="maintweet-footer">
+            <button id="tweet-button" type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+      <section class="tweets-timeline">
+        <article class="tweet-box">
+          <header class="tweet-header">
+            <div class="tweet-userphoto-username">
+              <div>
+                <i class="fa-solid fa-crow fa-2xl"></i>
+                <label>Raven</label>
+              </div>
+              <label> @Ravensoftware </label>
+            </div>
+            <div class="tweet-container">
+              <p class="tweet-user-text">
+                🎉 2XP is live through Monday in #Warzone. 🪖 Whether it's
+                Caldera, Fortune's Keep, or Rebirth Island, we'll see you out
+                there!
+              </p>
+            </div>
+            <footer class="tweet-footer">
+              <div class="day-counter">10 days</div>
+              <div class="social-icons">
+                <i class="fa-solid fa-flag">  </i>
+                <i class="fa-solid fa-heart">  </i>
+                <i class="fa-solid fa-retweet">  </i>
+              </div>
+              </footer>
+          </header>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
