Removed whole tweet article that held template for a tweet, and incorporated it into function in JS. This way we are using JS to gather information from any user and inject that information into the template automatically instead of it being hard coded

--- a/public/index.html
+++ b/public/index.html
@@ -84,34 +84,7 @@
           </div>
         </form>
       </section>
-      <section class="tweets-timeline">
-        <article class="tweet-box">
-          <header class="tweet-header">
-            <div class="tweet-userphoto-username">
-              <div>
-                <i class="fa-solid fa-crow fa-2xl"></i>
-                <label>Raven</label>
-              </div>
-              <label> @Ravensoftware </label>
-            </div>
-            <div class="tweet-container">
-              <p class="tweet-user-text">
-                🎉 2XP is live through Monday in #Warzone. 🪖 Whether it's
-                Caldera, Fortune's Keep, or Rebirth Island, we'll see you out
-                there!
-              </p>
-            </div>
-            <footer class="tweet-footer">
-              <div class="day-counter">10 days</div>
-              <div class="social-icons">
-                <i class="fa-solid fa-flag">  </i>
-                <i class="fa-solid fa-heart">  </i>
-                <i class="fa-solid fa-retweet">  </i>
-              </div>
-              </footer>
-          </header>
-        </article>
-      </section>
+      <section class="tweets-timeline"/>
     </main>
   </body>
 </html>
