Changed tweet form submission to work with jQuery and Ajax, that way post request for tweet submission can be sent to /tweets asynchronously, allowing us to complete this action without a page refresh

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets">
+        <form id="submit-tweet-form" method="POST" action="/tweets">
           <div id="label-textarea">
             <label for="tweet-text">What are you humming about?</label>
             <!-- Use textarea instead of form to provide user with expandable text area, incase tweet gets long. -->
