Added a few adjustments: Changed header name color to white, changed name on profile, shifted somethings in client.js but did not change anything really

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       </div>
       <br />
       <div>
-        <h2 id="profile-name">JGM</h2>
+        <h2 id="profile-name">Jenelle Martinez</h2>
       </div>
     </header>
 
@@ -76,6 +76,8 @@
             <!-- Use textarea instead of form to provide user with expandable text area, incase tweet gets long. -->
             <textarea name="text" id="tweet-text"></textarea>
           </div>
+          <section class="new-error">
+          </section>
           <div class="maintweet-footer">
             <button id="tweet-button" type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
