Formatted index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,65 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta Information -->
-    <title>Tweeter - Home Page</title>
 
-    <!-- Disable viewport zooming -->
+<head>
+  <!-- Meta Information -->
+  <title>Tweeter - Home Page</title>
 
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
+  <!-- Disable viewport zooming -->
 
-    <!-- External CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      type="text/css"
-    />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap"
-      rel="stylesheet"
-    />
+  <!-- External CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    type="text/css" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap"
+    rel="stylesheet" />
 
-    <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  <!-- App CSS -->
+  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
-    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
-    <link rel="stylesheet" href="/styles/tweets-timeline.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
-    <!-- External JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="/styles/tweets-timeline.css" type="text/css" />
 
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/client.js"></script>
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  </head>
+  <!-- External JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <body>
-    <!-- Top nav bar (fixed) -->
-    <nav class="navbar-top">
-      <span class="navbar-logo">Tweeter</span>
-      <div class="navbar-menu">
-        <p><strong>Write</strong> a new tweet</p>
-        <i class="fa-solid fa-angles-down"></i>
-      </div>
-    </nav>
-    <div class="profile-header-for-desktop">
+  <!-- App JS -->
+  <script type="text/javascript" src="/scripts/client.js"></script>
+  <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
+    integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
+
+<body>
+  <!-- Top nav bar (fixed) -->
+  <nav class="navbar-top">
+    <span class="navbar-logo">Tweeter</span>
+    <div class="navbar-menu">
+      <p><strong>Write</strong> a new tweet</p>
+      <i class="fa-solid fa-angles-down"></i>
+    </div>
+  </nav>
+  <div class="profile-header-for-desktop">
     <header id="profile-header">
       <div>
         <img src="/images/profile-hex.png" />
@@ -69,29 +64,30 @@
         <h2 id="profile-name">Jenelle Martinez</h2>
       </div>
     </header>
-    </div>
+  </div>
 
-    <!-- Page-specific (main) content here -->
-    <main class="container">
-      <!-- <div class="new-tweet-tweets-timeline"> -->
-      <section class="new-tweet">
-        <h2>Compose Tweet</h2>
-        <form id="submit-tweet-form" method="POST" action="/tweets">
-          <div id="label-textarea">
-            <label for="tweet-text">What are you humming about?</label>
-            <!-- Use textarea instead of form to provide user with expandable text area, incase tweet gets long. -->
-            <textarea name="text" id="tweet-text"></textarea>
-          </div>
-          <section class="new-error">
-          </section>
-          <div class="maintweet-footer">
-            <button id="tweet-button" type="submit">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
-          </div>
-        </form>
-      </section>
-      <section class="tweets-timeline"/>
+  <!-- Page-specific (main) content here -->
+  <main class="container">
+    <!-- <div class="new-tweet-tweets-timeline"> -->
+    <section class="new-tweet">
+      <h2>Compose Tweet</h2>
+      <form id="submit-tweet-form" method="POST" action="/tweets">
+        <div id="label-textarea">
+          <label for="tweet-text">What are you humming about?</label>
+          <!-- Use textarea instead of form to provide user with expandable text area, incase tweet gets long. -->
+          <textarea name="text" id="tweet-text"></textarea>
+        </div>
+        <section class="new-error">
+        </section>
+        <div class="maintweet-footer">
+          <button id="tweet-button" type="submit">Tweet</button>
+          <output name="counter" class="counter" for="tweet-text">140</output>
+        </div>
+      </form>
+    </section>
+    <section class="tweets-timeline" />
     <!-- </div> -->
-    </main>
-  </body>
+  </main>
+</body>
+
 </html>
